Fix doubling of playernumbers with non default playernames

Seach for smallest missing playerNum instead of first missing default name.
List is sorted by playerNum to acheive that.

BUG: 270353

svn path=/trunk/KDE/kdegames/konquest/; revision=1250998